As an app developer I want to be able to modify the details of a given challenge
